<!--
  ~ Copyright 2017 dvdandroid
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Web Music Controller</string>
    <string name="port_in_use">Port already in use.</string>
    <string name="no_server_connection">Cannot connect to the server</string>
    <string name="welcome_description">Control your music from web browser</string>
    <string name="connection_type">Connection type</string>
    <string name="connection_type_d">You can use a USB cable or a Wi-Fi connection to remote control your music</string>
    <string name="authorization_available">Access with username and password</string>
    <string name="authorization_available_d">Your controller can be protected with username and password. Useful in public networks.</string>
    <string name="storage_access">Storage permission</string>
    <string name="storage_access_d">The app needs the permission to read storage to load the album art</string>
    <string name="wired_connection">Wired connection</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save_credentials">Save</string>
    <string name="authentication">Authentication</string>
    <string name="server_status">Servers status</string>
    <string name="authentication_enabled">Enable authentication</string>
    <string name="webserver_not_running">Web server not running</string>
    <string name="webserver_running">Web server running</string>
    <string name="websocket_running">Web socket running</string>
    <string name="websocket_not_running">Web socket not running</string>
    <string name="blank_field">Empty field</string>
    <string name="credentials_saved">Credentials saved</string>
    <string name="controller_access">Access to the controller</string>
    <string name="internet_connection">Internet</string>
    <string name="adb_usage">To access to the controller via a USB cable, you need ADB installed on your machine. You can download it from Google Developers webpage\nOnce installed it, you need to open a terminal/CMD window, connect your Android device and paste these commands</string>
    <string name="adb_commands">adb forward tcp:9620 tcp:9620\nadb forward tcp:9621 tcp:9621</string>
    <string name="adb_usage_">After that you can browser to <b>localhost:9620</b></string>
    <string name="no_internet">No internet access. Connect to WiFi and try again</string>
    <string name="internet_connection_">You can browse to this address:</string>
    <string name="stop_all">Stop all</string>
    <string name="start_all">Start all</string>
    <string name="restart_server">Restarting server…</string>

</resources>