<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 dvdandroid
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.dvd.android.webmusiccontroller.MainActivity"
            tools:ignore="ContentDescription,UseCompoundDrawables">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <TextView
                    android:id="@+id/server_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_status"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/server_status"
                    android:baselineAligned="false"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/webserver_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="2dp">

                        <ImageView
                            android:id="@+id/webserver_icon"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_ok"/>

                        <TextView
                            android:id="@+id/webserver_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/webserver_running"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/websocket_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="2dp">

                        <ImageView
                            android:id="@+id/websocket_icon"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_ok"/>

                        <TextView
                            android:id="@+id/websocket_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/websocket_running"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/internet_connection"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/no_internet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no_internet"
                    android:textColor="#F44336"
                    android:visibility="gone"/>

                <RelativeLayout
                    android:id="@+id/internet_usage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/internet_connection_"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/internet_connection_"/>

                    <TextView
                        android:id="@+id/ip_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/internet_connection_"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="http://0.0.0.0:9620"/>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wired_connection"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adb_usage"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:cardBackgroundColor="#363636"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="1dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/adb_commands"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:typeface="monospace"/>

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/adb_usage_"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="6dp">

                <TextView
                    android:id="@+id/authentication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authentication"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/authentication"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_person"/>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="8dp">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/username"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_vpn"/>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="8dp"
                            app:passwordToggleEnabled="true">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/password"
                                android:inputType="textPassword"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/authentication_enabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/save_credentials"
                    android:layout_alignStart="@+id/linearLayout"
                    android:layout_below="@+id/linearLayout"
                    android:text="@string/authentication_enabled"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/save_credentials"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/linearLayout"
                    android:layout_below="@+id/linearLayout"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_save"
                    android:text="@string/save_credentials"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

    </LinearLayout>

</ScrollView>